# Transform_factory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
latex2kb/: README.md  latex2kb.example.yaml  pyproject.toml
latex2kb/config/: default_macros.yaml
latex2kb/src/latex2kb/: __init__.py  __main__.py  bibliography.py  cli.py  converter.py  crossref.py  figures.py  img2kb_pipeline.py  macro_resolver.py  metadata.py  output_writer.py  parser_core.py  pipeline.py  project_scanner.py  utils.py
latex2kb/src/latex2kb/environments/: __init__.py  algorithm.py  figure.py  list.py  math.py  table.py  theorem.py
latex2kb/tests/: conftest.py  test_bibliography.py  test_converter.py  test_crossref.py  test_img2kb.py  test_macro_resolver.py  test_pipeline.py  test_project_scanner.py
latex2kb/tests/fixtures/minimal_project/: main.tex  refs.bib
latex2kb/tests/fixtures/minimal_project/chapters/: ch1.tex  ch2.tex
